syntax = "proto3";

package api;

service CloudmgmtService {
  rpc SendHTTPRequest (ProxyRequest) returns (ProxyResponse) {}
}

message ProxyRequest {
  string tenantId = 1;
  string edgeId = 2;
  string url = 3;
  bytes request = 4;
}

message ProxyResponse {
  string status = 1;
  bytes response = 2;
  int32 statusCode = 3;
}
